Fix titles, cta, overflow

--- a/assets/scss/buttons-links.scss
+++ b/assets/scss/buttons-links.scss
@@ -16,11 +16,10 @@
   }
 
   &.btn-cta {
-    margin: 2rem auto;
     padding: 0.5rem 1rem;
-    border-radius: $border-radius-small;
-    box-shadow: $boxshadow-light;
     text-decoration: none;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
   }
 }
 
