--- a/assets/scss/texts.scss
+++ b/assets/scss/texts.scss
@@ -21,15 +21,10 @@ header .col {
 .text-page {
   background: $white;
   margin-top: -3rem;
-  overflow-x: hidden;
 
   h1 {
     margin-bottom: 0.5rem;
     text-transform: capitalize;
-  }
-  h2 {
-    margin-bottom: 0;
-    font-size: 2.125rem;
   }
 
   .subtitle,
@@ -38,8 +33,11 @@ header .col {
     font-size: $font-size-large;
     font-weight: normal;
     line-height: normal;
-    margin-bottom: 0.5rem;
     text-transform: capitalize;
+  }
+
+  p.lead {
+    margin-bottom: 0.5rem;
   }
 
   article {
